# traductor

./: .gitignore  CMakeLists.txt
files/: in.txt  salida.txt  text.txt
include/: app.h
include/core/: execution_time.h  translator.h  validator.h
include/core/instruction/: Instruction.h  InstructionManager.h
include/core/label/: label.h  label_manager.h
include/structures/: string.h  vector.h
include/utils/: FileManager.h
src/: app.c  main.c
src/core/instruction/: Instruction.c  InstructionManager.c
src/core/label/: label.c  label_manager.c
src/structures/: string.c  vector.c
src/utils/: FileManager.c
